# year-progress

./: .gitignore  README.md  main.vala  meson.build
.github/workflows/: build.yml
data/: POTFILES  year-progress.desktop
parts/gnome/sdk/run/: build.sh  environment.sh
parts/gnome/sdk/state/: pull
parts/year-progress/state/: pull
po/: POTFILES  meson.build  year-progress.pot
snap/: snapcraft.yaml
